# Math-Agent

./: README.md  main.py  requirements.txt
app/: main.py
app/api/agents/: __init__.py
app/api/agents/math_agent/: README.md  __main__.py  agent.py  pyproject.toml  task_manager.py
app/api/agents/ocr_agent/: README.md  __main__.py  agent.py  task_manager.py
app/api/agents/pdf_agent/: README.md  __main__.py  agent.py  task_manager.py
app/api/common/utils/: task_bridge.py
app/api/hosts/multiagent/: agent.py  remote_agent_connection.py
app/api/routes/: latex.py
app/core/: config.py  exceptions.py  models.py
app/services/: latex.py  ocr.py
